# qmc_decoder_android

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/release/: output-metadata.json  qq音乐解码器.apk
app/src/androidTest/java/com/imorning/qmc_decoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jniInterface.cpp  main.cpp  native-lib.cpp
app/src/main/cpp/src/: decoder.cpp
app/src/main/java/com/imorning/qmc_decoder/: App.java  Decoder.java  MainActivity.java  PermissionActivity.java
app/src/main/res/layout/: activity_main.xml  file_item.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/imorning/qmc_decoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
qmcdecoder/src/main/java/com/imorning/qmcdecoder/: DecodeWorker.java  FileDropTarget.java  KeyGenerator.java  MainThread.java  QmcDecode.java  QmcInputStream.java
